# sdss_brain

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.md  setup.cfg
.github/workflows/: build.yml  pythonapp.yml  pythonpublish.yml  release.yml  sphinxbuild.yml
docs/sphinx/: api.rst  apilist.rst  auth.rst  conf.py  config.rst  database.rst  index.rst  intro.rst  mma.rst  parsing.rst  remote.rst  remote_details.rst  tools.rst  version.rst  work.rst
python/sdss_brain/: __init__.py  config.py  core.py  exceptions.py  helpers.py  mma.py  tools.py
python/sdss_brain/api/: __init__.py  client.py  handler.py  io.py  manager.py
python/sdss_brain/auth/: __init__.py  htpass.py  netrc.py  user.py
python/sdss_brain/datamodel/: __init__.py  products.py  versions.py
python/sdss_brain/etc/: api_profiles.yml  sdss_brain.yml
python/sdss_brain/helpers/: __init__.py  database.py  decorators.py  io.py  parsing.py
python/sdss_brain/mixins/: __init__.py  access.py  datamodel.py  mma.py
python/sdss_brain/tools/: __init__.py  cubes.py  spectra.py
tests/: conftest.py  test_config.py  test_example.py  test_main.py  test_mma.py  test_params.py  test_parsing.py  test_versions.py
tests/api/: __init__.py  conftest.py  test_client.py  test_handler.py  test_io.py  test_manager.py
tests/auth/: test_htpass.py  test_netrc.py  test_user.py
tests/data/: objects.yaml
tests/helpers/: __init__.py  test_database.py  test_versions.py
tests/models/: fitsfile.json  schema.json  test_products.py  test_versions.py
tests/tools/: __init__.py  conftest.py  test_apogee.py  test_eboss.py  test_manga.py
