[metadata]
name = sdss-brain
version = 0.4.0-alpha
author = Brian Cherinka
author_email = bcherinka@stsci.edu
description = Core Brain for SDSS
url = https://github.com/sdss/sdss_brain
project_urls =
	Repository = https://github.com/sdss/sdss_brain
	Documentation = https://sdss-brain.readthedocs.org
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Documentation :: Sphinx
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
package_dir =
	= python
install_requires =
	sdss-tree>=3.1
	sdss-access>=2.0
	sdssdb>=0.5
	sdsstools>=0.4.0
	astropy>=3.3
	specutils>=1.8
	httpx>=0.21.0
	pydantic>=1.10.0
	datamodel-code-generator>=0.13.1
scripts =
	bin/sdss_brain

[options.packages.find]
where =
	python

[options.package_data]
sdss_brain =
	etc/*

[options.extras_require]
extras =
	matplotlib>=3.1.1
	tqdm>=4.46.0
	passlib>=1.7.1
	tabulate>=0.8.7
dev =
	%(docs)s # This forces the docs extras to install (http://bit.ly/2Qz7fzb)
	ipython>=7.9.0
	matplotlib>=3.1.1
	flake8>=3.7.9
	doc8>=0.8.0
	pytest>=5.2.2
	pytest-asyncio>=0.10.0
	pytest-cov>=2.8.1
	pytest-mock>=3.7
	pytest-sugar>=0.9.2
	pytest-remotedata>=0.3.2
	respx>=0.19
	passlib>=1.7.1
	isort>=4.3.21
	codecov>=2.0.15
	coverage[toml]>=5.0
	ipdb>=0.12.3
	sdsstools[dev]>=0.4.0
	sqlalchemy>=1.3.13
	# The following are needed because sdsstools[dev] as an extra not always
	# gets installed. See https://github.com/pypa/pip/issues/4957.
	invoke>=1.3.0
	twine>=3.1.1
	wheel>=0.33.6
docs =
	Sphinx>=5.0.0
	furo>=2021.6.18b36
	sphinx-copybutton>=0.3.3
	sphinx-inline-tabs>=2021.3.28b7

[isort]
line_length = 79
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = sdss_brain
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
	H101
	E722
	W504
	W505
per-file-ignores =
    */__init__.py:E,W
max-line-length = 99

[tool:pytest]
addopts = --cov sdss_brain --cov-report html -W ignore
markers =
	datasource: marks tests as needing data from a given source
	use_data: marks test to load a specific test data

[coverage:run]
branch = true
include =
	python/sdss_brain/*
omit =
    */utils/*.py
    */__init__.py

[coverage:report]
exclude_lines =
